<resources>
    <string name="app_name">RoboCar</string>

    <string name="btnResolution">Resolution</string>
    <string name="btnRaw">Raw</string>
    <string name="btnHSV">HSV</string>
    <string name="btnThreshold">Threshold</string>
    <string name="btnHue">Hue</string>
    <string name="btnSaturation">Saturation</string>
    <string name="btnValue">Value</string>
    <string name="btnReset">Reset</string>
    <string name="btnTrack">Track</string>
    <string name="btnDrive">Drive</string>
    <string name="btnAuto">Auto</string>

    <string name="request_permission">This app needs camera permission</string>

    <string name="error_connect_failed">Connection Failed</string>
    <string name="error_connect_lost">Connection Lost</string>

    <string name="flashlight">Flashlight</string>

    <string name="title_activity_drive">DriveActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
