<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ca.jetsphere.robocar.devices.MyJavaCameraView
        android:id="@+id/java_camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"/>

    <ToggleButton
        android:id="@+id/btnConnect"
        style="@style/btButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/bt_toggle_bg"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/btnTorch"
        style="@style/btButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/torch_toggle_bg"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConnect" />

    <ImageButton
        android:id="@+id/btnDrive"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/steering_wheel"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTorch" />

    <ImageButton
        android:id="@+id/btnAuto"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/steering_wheel"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTorch" />

    <android.support.constraint.Group
        android:id="@+id/trackGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:constraint_referenced_ids="btnConnect,btnDrive,btnTorch,btnRawImage,btnThresholdImage,btnTrackImage" />

    <ToggleButton
        android:id="@+id/btnRawImage"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/toggle_button_custom"
        android:checked="true"
        android:text="@string/btnRaw"
        android:textColor="@color/toggle_button_color"
        android:textOff="@string/btnRaw"
        android:textOn="@string/btnRaw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnThresholdImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/btnThresholdImage"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/btnThreshold"
        android:textOn="@string/btnThreshold"
        android:textOff="@string/btnThreshold"
        android:background="@drawable/toggle_button_custom"
        android:textColor="@color/toggle_button_color"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnTrackImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnRawImage" />

    <ToggleButton
        android:id="@+id/btnTrackImage"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/toggle_button_custom"
        android:checked="false"
        android:text="@string/btnTrack"
        android:textColor="@color/toggle_button_color"
        android:textOff="@string/btnTrack"
        android:textOn="@string/btnTrack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnThresholdImage" />

    <android.support.constraint.Group
        android:id="@+id/driveGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:constraint_referenced_ids="btnConnect,btnTorch,btnAuto,layout_joystick,textView1,textView2,textView3,textView4,textView5" />

    <RelativeLayout
        android:id="@+id/layout_joystick"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/joystick_button_bg"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="X: 0"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTrack" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Y: 0"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Angle: 0"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Distance: 0"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Direction: 0"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <android.support.constraint.Group
        android:id="@+id/hsvGroup"
        android:layout_width="27dp"
        android:layout_height="26dp"
        android:visibility="gone"
        app:constraint_referenced_ids="btnHue,btnSaturation,btnValue" />

    <org.florescu.android.rangeseekbar.RangeSeekBar
        android:id="@+id/rsbHue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#fff"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        rsb:absoluteMaxValue="255"
        rsb:absoluteMinValue="0"
        rsb:showLabels="true"
        rsb:textAboveThumbsColor="@android:color/holo_blue_dark" />

    <org.florescu.android.rangeseekbar.RangeSeekBar
        android:id="@+id/rsbSaturation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#fff"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        rsb:absoluteMaxValue="255"
        rsb:absoluteMinValue="0"
        rsb:showLabels="true"
        rsb:textAboveThumbsColor="@android:color/holo_blue_dark" />

    <org.florescu.android.rangeseekbar.RangeSeekBar
        android:id="@+id/rsbValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#fff"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        rsb:absoluteMaxValue="255"
        rsb:absoluteMinValue="0"
        rsb:showLabels="true"
        rsb:textAboveThumbsColor="@android:color/holo_blue_dark" />

    <ToggleButton
        android:id="@+id/btnHue"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/btnHue"
        android:textOn="@string/btnHue"
        android:textOff="@string/btnHue"
        android:background="@drawable/toggle_button_custom"
        android:textColor="@color/toggle_button_color"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSaturation"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/btnSaturation"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/btnSaturation"
        android:textOn="@string/btnSaturation"
        android:textOff="@string/btnSaturation"
        android:background="@drawable/toggle_button_custom"
        android:textColor="@color/toggle_button_color"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnHue" />

    <ToggleButton
        android:id="@+id/btnValue"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/btnValue"
        android:textOn="@string/btnValue"
        android:textOff="@string/btnValue"
        android:background="@drawable/toggle_button_custom"
        android:textColor="@color/toggle_button_color"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSaturation" />

</android.support.constraint.ConstraintLayout>